# dggs-benchmarking

./: .pre-commit-config.yaml  EOPF_UTM_to_HEALPix.ipynb  Healpix_metadata_S2.ipynb  How_To_download_climatedt_ifsnemo.ipynb  README.md  climate-dt-regridding-temporal.ipynb  climate-dt-regridding.ipynb  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: test.yml
ellipsoidal-healpix/: GRID4EARTH_hpxgeo_authalic_vs_implicit_nested-3.ipynb
examples/: local.py
src/benchmark/: __init__.py  benchmark.py  cluster.py  data.py  operations.py  timer.py
tests/: test_local.py
